--- a/CSharpIntro8Nov2024/CSharpIntro8Nov2024.csproj
+++ b/CSharpIntro8Nov2024/CSharpIntro8Nov2024.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>CSharpIntro8Nov2024.CollectionDemo</StartupObject>
+    <StartupObject>CSharpIntro8Nov2024.LTI_EM_AT_Demos</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -49,6 +49,7 @@
     <Compile Include="CollectionDemo.cs" />
     <Compile Include="DelegateDemo.cs" />
     <Compile Include="GenericDemo.cs" />
+    <Compile Include="LTI_EM_AT.cs" />
     <Compile Include="MethodFeatures.cs" />
     <Compile Include="OOPDemo.cs" />
     <Compile Include="Program.cs" />
